src/LaxScriptParser.java
// Generated from /home/dennis/Desktop/LaxScript/parser/LaxScript.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LaxScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, String=41, Identifier=42, SpecialCharacter=43, Number=44, 
		Spacing=45;
	public static final int
		RULE_p = 0, RULE_k = 1, RULE_d = 2, RULE_init = 3, RULE_print = 4, RULE_int = 5, 
		RULE_str = 6, RULE_bool = 7, RULE_unaryOp = 8, RULE_ternaryOp = 9, RULE_cond = 10, 
		RULE_assignOp = 11, RULE_synthSugar = 12, RULE_ifCond = 13, RULE_whileLoop = 14, 
		RULE_forLoop = 15, RULE_option = 16, RULE_forRangeLoop = 17, RULE_expr = 18, 
		RULE_element = 19, RULE_value = 20, RULE_line = 21, RULE_sentenceOp = 22, 
		RULE_sentence = 23, RULE_iden = 24, RULE_specialChar = 25, RULE_num = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"p", "k", "d", "init", "print", "int", "str", "bool", "unaryOp", "ternaryOp", 
			"cond", "assignOp", "synthSugar", "ifCond", "whileLoop", "forLoop", "option", 
			"forRangeLoop", "expr", "element", "value", "line", "sentenceOp", "sentence", 
			"iden", "specialChar", "num"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "';'", "'int'", "'str'", "'boolean'", "'print'", "'('", 
			"')'", "'='", "'\"'", "'true'", "'false'", "'++'", "'--'", "'?'", "':'", 
			"'=='", "'<'", "'>'", "'<='", "'>='", "'!='", "'+='", "'-='", "'*='", 
			"'/='", "'if'", "'then'", "'{'", "'}'", "'else'", "'while'", "'for'", 
			"'in'", "'range'", "','", "'+'", "'-'", "'*'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "String", "Identifier", "SpecialCharacter", 
			"Number", "Spacing"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LaxScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LaxScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PContext extends ParserRuleContext {
		public KContext k() {
			return getRuleContext(KContext.class,0);
		}
		public PContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).enterP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).exitP(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaxScriptVisitor ) return ((LaxScriptVisitor<? extends T>)visitor).visitP(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PContext p() throws RecognitionException {
		PContext _localctx = new PContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_p);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			k();
			setState(55);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KContext extends ParserRuleContext {
		public DContext d() {
			return getRuleContext(DContext.class,0);
		}
		public KContext k() {
			return getRuleContext(KContext.class,0);
		}
		public InitContext init() {
			return getRuleContext(InitContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public UnaryOpContext unaryOp() {
			return getRuleContext(UnaryOpContext.class,0);
		}
		public TernaryOpContext ternaryOp() {
			return getRuleContext(TernaryOpContext.class,0);
		}
		public AssignOpContext assignOp() {
			return getRuleContext(AssignOpContext.class,0);
		}
		public SynthSugarContext synthSugar() {
			return getRuleContext(SynthSugarContext.class,0);
		}
		public IfCondContext ifCond() {
			return getRuleContext(IfCondContext.class,0);
		}
		public WhileLoopContext whileLoop() {
			return getRuleContext(WhileLoopContext.class,0);
		}
		public ForLoopContext forLoop() {
			return getRuleContext(ForLoopContext.class,0);
		}
		public ForRangeLoopContext forRangeLoop() {
			return getRuleContext(ForRangeLoopContext.class,0);
		}
		public KContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_k; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).enterK(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).exitK(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaxScriptVisitor ) return ((LaxScriptVisitor<? extends T>)visitor).visitK(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KContext k() throws RecognitionException {
		KContext _localctx = new KContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_k);
		try {
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				d();
				setState(58);
				match(T__1);
				setState(59);
				k();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				d();
				setState(62);
				match(T__1);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(64);
				init();
				setState(65);
				match(T__1);
				setState(66);
				k();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(68);
				init();
				setState(69);
				match(T__1);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(71);
				print();
				setState(72);
				match(T__1);
				setState(73);
				k();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(75);
				print();
				setState(76);
				match(T__1);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(78);
				unaryOp();
				setState(79);
				match(T__1);
				setState(80);
				k();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(82);
				unaryOp();
				setState(83);
				match(T__1);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(85);
				ternaryOp();
				setState(86);
				match(T__1);
				setState(87);
				k();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(89);
				ternaryOp();
				setState(90);
				match(T__1);
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(92);
				assignOp();
				setState(93);
				match(T__1);
				setState(94);
				k();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(96);
				assignOp();
				setState(97);
				match(T__1);
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(99);
				synthSugar();
				setState(100);
				match(T__1);
				setState(101);
				k();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(103);
				synthSugar();
				setState(104);
				match(T__1);
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(106);
				ifCond();
				setState(107);
				k();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(109);
				ifCond();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(110);
				whileLoop();
				setState(111);
				k();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(113);
				whileLoop();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(114);
				forLoop();
				setState(115);
				k();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(117);
				forLoop();
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(118);
				forRangeLoop();
				setState(119);
				k();
				}
				break;
			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(121);
				forRangeLoop();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DContext extends ParserRuleContext {
		public DContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_d; }
	 
		public DContext() { }
		public void copyFrom(DContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclarationBooleanContext extends DContext {
		public IdenContext iden() {
			return getRuleContext(IdenContext.class,0);
		}
		public DeclarationBooleanContext(DContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).enterDeclarationBoolean(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).exitDeclarationBoolean(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaxScriptVisitor ) return ((LaxScriptVisitor<? extends T>)visitor).visitDeclarationBoolean(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclarationStringContext extends DContext {
		public IdenContext iden() {
			return getRuleContext(IdenContext.class,0);
		}
		public DeclarationStringContext(DContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).enterDeclarationString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).exitDeclarationString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaxScriptVisitor ) return ((LaxScriptVisitor<? extends T>)visitor).visitDeclarationString(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclarationIntegerContext extends DContext {
		public IdenContext iden() {
			return getRuleContext(IdenContext.class,0);
		}
		public DeclarationIntegerContext(DContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).enterDeclarationInteger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).exitDeclarationInteger(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaxScriptVisitor ) return ((LaxScriptVisitor<? extends T>)visitor).visitDeclarationInteger(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DContext d() throws RecognitionException {
		DContext _localctx = new DContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_d);
		try {
			setState(130);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				_localctx = new DeclarationIntegerContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				match(T__2);
				setState(125);
				iden();
				}
				break;
			case T__3:
				_localctx = new DeclarationStringContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				match(T__3);
				setState(127);
				iden();
				}
				break;
			case T__4:
				_localctx = new DeclarationBooleanContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(128);
				match(T__4);
				setState(129);
				iden();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitContext extends ParserRuleContext {
		public IntContext int_() {
			return getRuleContext(IntContext.class,0);
		}
		public StrContext str() {
			return getRuleContext(StrContext.class,0);
		}
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).exitInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaxScriptVisitor ) return ((LaxScriptVisitor<? extends T>)visitor).visitInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_init);
		try {
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				int_();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				str();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(134);
				bool();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
	 
		public PrintContext() { }
		public void copyFrom(PrintContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PrintStrContext extends PrintContext {
		public LineContext line() {
			return getRuleContext(LineContext.class,0);
		}
		public PrintStrContext(PrintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).enterPrintStr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).exitPrintStr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaxScriptVisitor ) return ((LaxScriptVisitor<? extends T>)visitor).visitPrintStr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrintExprContext extends PrintContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public PrintExprContext(PrintContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).enterPrintExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).exitPrintExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaxScriptVisitor ) return ((LaxScriptVisitor<? extends T>)visitor).visitPrintExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_print);
		try {
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new PrintStrContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				match(T__5);
				setState(138);
				match(T__6);
				setState(139);
				line();
				setState(140);
				match(T__7);
				}
				break;
			case 2:
				_localctx = new PrintExprContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				match(T__5);
				setState(143);
				match(T__6);
				setState(144);
				expr();
				setState(145);
				match(T__7);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntContext extends ParserRuleContext {
		public IntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_int; }
	 
		public IntContext() { }
		public void copyFrom(IntContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IdentifierIntInitContext extends IntContext {
		public List<IdenContext> iden() {
			return getRuleContexts(IdenContext.class);
		}
		public IdenContext iden(int i) {
			return getRuleContext(IdenContext.class,i);
		}
		public IdentifierIntInitContext(IntContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).enterIdentifierIntInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).exitIdentifierIntInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaxScriptVisitor ) return ((LaxScriptVisitor<? extends T>)visitor).visitIdentifierIntInit(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumberIntInitContext extends IntContext {
		public IdenContext iden() {
			return getRuleContext(IdenContext.class,0);
		}
		public NumContext num() {
			return getRuleContext(NumContext.class,0);
		}
		public NumberIntInitContext(IntContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).enterNumberIntInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).exitNumberIntInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaxScriptVisitor ) return ((LaxScriptVisitor<? extends T>)visitor).visitNumberIntInit(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExpressionIntInitContext extends IntContext {
		public IdenContext iden() {
			return getRuleContext(IdenContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExpressionIntInitContext(IntContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).enterExpressionIntInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).exitExpressionIntInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaxScriptVisitor ) return ((LaxScriptVisitor<? extends T>)visitor).visitExpressionIntInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntContext int_() throws RecognitionException {
		IntContext _localctx = new IntContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_int);
		try {
			setState(164);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new NumberIntInitContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				match(T__2);
				setState(150);
				iden();
				setState(151);
				match(T__8);
				setState(152);
				num();
				}
				break;
			case 2:
				_localctx = new IdentifierIntInitContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				match(T__2);
				setState(155);
				iden();
				setState(156);
				match(T__8);
				setState(157);
				iden();
				}
				break;
			case 3:
				_localctx = new ExpressionIntInitContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(159);
				match(T__2);
				setState(160);
				iden();
				setState(161);
				match(T__8);
				setState(162);
				expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrContext extends ParserRuleContext {
		public StrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_str; }
	 
		public StrContext() { }
		public void copyFrom(StrContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SentenceStrInitContext extends StrContext {
		public IdenContext iden() {
			return getRuleContext(IdenContext.class,0);
		}
		public LineContext line() {
			return getRuleContext(LineContext.class,0);
		}
		public SentenceStrInitContext(StrContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).enterSentenceStrInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).exitSentenceStrInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaxScriptVisitor ) return ((LaxScriptVisitor<? extends T>)visitor).visitSentenceStrInit(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IdentifierStrInitContext extends StrContext {
		public List<IdenContext> iden() {
			return getRuleContexts(IdenContext.class);
		}
		public IdenContext iden(int i) {
			return getRuleContext(IdenContext.class,i);
		}
		public IdentifierStrInitContext(StrContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).enterIdentifierStrInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).exitIdentifierStrInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaxScriptVisitor ) return ((LaxScriptVisitor<? extends T>)visitor).visitIdentifierStrInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StrContext str() throws RecognitionException {
		StrContext _localctx = new StrContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_str);
		try {
			setState(178);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new IdentifierStrInitContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(166);
				match(T__3);
				setState(167);
				iden();
				setState(168);
				match(T__8);
				setState(169);
				iden();
				}
				break;
			case 2:
				_localctx = new SentenceStrInitContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(171);
				match(T__3);
				setState(172);
				iden();
				setState(173);
				match(T__8);
				setState(174);
				match(T__9);
				setState(175);
				line();
				setState(176);
				match(T__9);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoolContext extends ParserRuleContext {
		public BoolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bool; }
	 
		public BoolContext() { }
		public void copyFrom(BoolContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IdentifierBoolValContext extends BoolContext {
		public Token boolVal;
		public IdenContext iden() {
			return getRuleContext(IdenContext.class,0);
		}
		public IdentifierBoolValContext(BoolContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).enterIdentifierBoolVal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).exitIdentifierBoolVal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaxScriptVisitor ) return ((LaxScriptVisitor<? extends T>)visitor).visitIdentifierBoolVal(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IdentifierBoolInitContext extends BoolContext {
		public List<IdenContext> iden() {
			return getRuleContexts(IdenContext.class);
		}
		public IdenContext iden(int i) {
			return getRuleContext(IdenContext.class,i);
		}
		public IdentifierBoolInitContext(BoolContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).enterIdentifierBoolInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LaxScriptListener ) ((LaxScriptListener)listener).exitIdentifierBoolInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LaxScriptVisitor ) return ((LaxScriptVisitor<? extends T>)visitor).visitIdentifierBoolInit(this);
			else return visitor.visitChildren(this);
		}
	}
